# hrm

./: .gitignore  Cargo.toml
examples/: simple.rs
src/: code.rs  game.rs  lib.rs  model.rs
src/code/: commands.rs  game_state.rs  program.rs
src/code/commands/: add.rs  bump_down.rs  bump_up.rs  command.rs  copy_from.rs  copy_to.rs  inbox.rs  jump.rs  jump_negative.rs  jump_zero.rs  outbox.rs  sub.rs
src/compiler/: compile.rs
src/game/: game_state.rs  problem.rs  value.rs
src/model/: problem_definition.rs
src/parser/: parse.rs
